--- a/lunar-surface.ipynb
+++ b/lunar-surface.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,17 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data already downloaded.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -98,25 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'driver': 'GTiff',\n",
-      " 'dtype': 'int16',\n",
-      " 'nodata': -32768.0,\n",
-      " 'width': 92160,\n",
-      " 'height': 46080,\n",
-      " 'count': 1,\n",
-      " 'crs': CRS.from_wkt('PROJCS[\"SimpleCylindrical Moon\",GEOGCS[\"GCS_Moon\",DATUM[\"D_Moon\",SPHEROID[\"Moon\",1737400,0]],PRIMEM[\"Reference_Meridian\",0],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]]],PROJECTION[\"Equirectangular\"],PARAMETER[\"standard_parallel_1\",0],PARAMETER[\"central_meridian\",0],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'),\n",
-      " 'transform': Affine(118.4505876, 0.0, -5458203.076608,\n",
-      "       0.0, -118.4505876, 2729101.538304)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import rasterio\n",
     "import pprint\n",
@@ -144,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "関数 map_data_on_sphere() の動作内容を日本語で解説するとこうなります。\n",
+    "関数 map_data_on_sphere() の動作内容を解説するとこうなります。\n",
     "\n",
     "- 関数は引数として、標高に換算するデータセット、経度・緯度の解像度（メッシュの細かさを決める）、および標高の効果を調整するスケール係数を受け取ります。\n",
     "\n",
@@ -229,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,24 +235,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70ea31d334654055ba10077fdd35ba69",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:55186/index.html?ui=P_0x13c33bbc0_0&reconnect=auto\" class=\"pyvista…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plotter = pv.Plotter()\n",
     "plotter.add_mesh(lunar_dem_sphere, show_edges=False, color=\"white\")\n",
@@ -309,48 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table style='width: 100%;'><tr><th>Header</th><th>Data Arrays</th></tr><tr><td>\n",
-       "<table style='width: 100%;'>\n",
-       "<tr><th>PolyData</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>2067840</td></tr>\n",
-       "<tr><td>N Points</td><td>1033922</td></tr>\n",
-       "<tr><td>N Strips</td><td>0</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-5.114e+01, 5.025e+01</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-5.103e+01, 5.032e+01</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>-5.139e+01, 5.030e+01</td></tr>\n",
-       "<tr><td>N Arrays</td><td>1</td></tr>\n",
-       "</table>\n",
-       "\n",
-       "</td><td>\n",
-       "<table style='width: 100%;'>\n",
-       "<tr><th>Name</th><th>Field</th><th>Type</th><th>N Comp</th><th>Min</th><th>Max</th></tr>\n",
-       "<tr><td>Normals</td><td>Points</td><td>float32</td><td>3</td><td>-1.000e+00</td><td>1.000e+00</td></tr>\n",
-       "</table>\n",
-       "\n",
-       "</td></tr> </table>"
-      ],
-      "text/plain": [
-       "PolyData (0x13c32b4c0)\n",
-       "  N Cells:    2067840\n",
-       "  N Points:   1033922\n",
-       "  N Strips:   0\n",
-       "  X Bounds:   -5.114e+01, 5.025e+01\n",
-       "  Y Bounds:   -5.103e+01, 5.032e+01\n",
-       "  Z Bounds:   -5.139e+01, 5.030e+01\n",
-       "  N Arrays:   1"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lunar_dem_sphere"
    ]
@@ -364,48 +286,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reducing 90.0 percent out of the original mesh\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<table style='width: 100%;'>\n",
-       "<tr><th>PolyData</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>206784</td></tr>\n",
-       "<tr><td>N Points</td><td>103445</td></tr>\n",
-       "<tr><td>N Strips</td><td>0</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-5.105e+01, 5.017e+01</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-5.101e+01, 5.031e+01</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>-5.139e+01, 5.029e+01</td></tr>\n",
-       "<tr><td>N Arrays</td><td>0</td></tr>\n",
-       "</table>\n",
-       "\n"
-      ],
-      "text/plain": [
-       "PolyData (0x301822020)\n",
-       "  N Cells:    206784\n",
-       "  N Points:   103445\n",
-       "  N Strips:   0\n",
-       "  X Bounds:   -5.105e+01, 5.017e+01\n",
-       "  Y Bounds:   -5.101e+01, 5.031e+01\n",
-       "  Z Bounds:   -5.139e+01, 5.029e+01\n",
-       "  N Arrays:   0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "target_reduction = 0.90\n",
     "print(f\"Reducing {target_reduction * 100.0} percent out of the original mesh\")\n",
@@ -422,55 +305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reducing 90.0 percent out of the original mesh\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table style='width: 100%;'><tr><th>Header</th><th>Data Arrays</th></tr><tr><td>\n",
-       "<table style='width: 100%;'>\n",
-       "<tr><th>PolyData</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>269524</td></tr>\n",
-       "<tr><td>N Points</td><td>134764</td></tr>\n",
-       "<tr><td>N Strips</td><td>0</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-5.114e+01, 5.025e+01</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-5.103e+01, 5.032e+01</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>-5.139e+01, 5.030e+01</td></tr>\n",
-       "<tr><td>N Arrays</td><td>1</td></tr>\n",
-       "</table>\n",
-       "\n",
-       "</td><td>\n",
-       "<table style='width: 100%;'>\n",
-       "<tr><th>Name</th><th>Field</th><th>Type</th><th>N Comp</th><th>Min</th><th>Max</th></tr>\n",
-       "<tr><td>Normals</td><td>Points</td><td>float32</td><td>3</td><td>-1.000e+00</td><td>1.000e+00</td></tr>\n",
-       "</table>\n",
-       "\n",
-       "</td></tr> </table>"
-      ],
-      "text/plain": [
-       "PolyData (0x301821360)\n",
-       "  N Cells:    269524\n",
-       "  N Points:   134764\n",
-       "  N Strips:   0\n",
-       "  X Bounds:   -5.114e+01, 5.025e+01\n",
-       "  Y Bounds:   -5.103e+01, 5.032e+01\n",
-       "  Z Bounds:   -5.139e+01, 5.030e+01\n",
-       "  N Arrays:   1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "target_reduction = 0.90\n",
     "print(f\"Reducing {target_reduction * 100.0} percent out of the original mesh\")\n",
@@ -499,24 +336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64dea1fd0b0f49c095e4bb554a600067",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:55186/index.html?ui=P_0x301237b90_1&reconnect=auto\" class=\"pyvista…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plotter = pv.Plotter(shape=(1, 3))\n",
     "plotter.add_mesh(lunar_dem_sphere, show_edges=False, color=\"white\")\n",
@@ -546,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,24 +417,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb9765f4192942ec945012540f00e6dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:55186/index.html?ui=P_0x3012a4aa0_2&reconnect=auto\" class=\"pyvista…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create shell from a mesh\n",
     "thickness = 2.0 # mm\n",
@@ -634,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
