--- a/lunar-lamp.ipynb
+++ b/lunar-lamp.ipynb
@@ -227,12 +227,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a51d6225b4a40558b5f9cec754e8342",
+       "model_id": "b07ab29bcb2e4b91b9fb19c9a0ac6a72",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:62068/index.html?ui=P_0x14e54efc0_0&reconnect=auto\" class=\"pyvista…"
+       "Widget(value='<iframe src=\"http://localhost:63126/index.html?ui=P_0x160caa0f0_0&reconnect=auto\" class=\"pyvista…"
       ]
      },
      "metadata": {},
@@ -256,16 +256,11 @@
     "このデータは、実測されたカラーデータの 7 つの波長帯域のうち 3 つを変更して組み合わせ、人間の目で見たものに近づけています。\n",
     "ソースデータは、月面の 70°N から 70°S までをカバーしていて、残りの部分は単色のデータと標高データから補完されています。\n",
     "\n",
-    "ここで利用したのは数十cmの3Dモデルに十分な細かさの4kのデータです。\n",
-    "3Dモデルの厚さに利用するため、元のRGBカラーデータをモノクロに変換しておきます。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "月面の色データをダウンロードします。\n",
-    "(すでにローカルフォルダにダウンロードしたデータがあれば、ダウンロードしません。)"
+    "ここで利用したのは数十cmの3Dモデルに十分な細かさの2kのデータです。\n",
+    "3Dモデルの厚さに利用するため、元のRGBカラーデータをモノクロに変換しておきます。\n",
+    "Python の Pillow ライブラリを使って、RGB からグレースケールに変換するコードを示しますが、GIMP などの画像処理ソフトを使っても同じように変換できます。\n",
+    "\n",
+    "リポジトリには3Dプリントの厚さで明暗を綺麗に出すために、GIMPでグレースケールにして、トーンカーブで調整したものを用意してあります。"
    ]
   },
   {
@@ -277,9 +272,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data already downloaded.\n",
-      "<PIL.TiffImagePlugin.TiffImageFile image mode=RGB size=4096x2048 at 0x301B65250>\n",
-      "<PIL.Image.Image image mode=L size=4096x2048 at 0x315121CD0>\n"
+      "<PIL.TiffImagePlugin.TiffImageFile image mode=RGB size=2048x1024 at 0x17C9818B0>\n"
      ]
     }
    ],
@@ -288,24 +281,37 @@
     "from PIL import Image\n",
     "import pprint\n",
     "\n",
-    "lunar_color_url = \"https://svs.gsfc.nasa.gov/vis/a000000/a004700/a004720/lroc_color_poles_4k.tif\"\n",
-    "lunar_color_file = os.path.join(os.getcwd(), 'data', os.path.basename(lunar_color_url))\n",
+    "lunar_color_gray_file = os.path.join(os.getcwd(), 'data', 'lunar_color_gray.tif')\n",
     "\n",
-    "# Download color file\n",
-    "if os.path.exists(lunar_color_file):\n",
-    "    print(\"Data already downloaded.\")\n",
-    "else:\n",
-    "    print(\"Downloading data...\")\n",
-    "    download_with_progress(lunar_color_url, lunar_color_file)\n",
+    "if not os.path.exists(lunar_color_gray_file):\n",
+    "    # Download color file\n",
+    "    lunar_color_url = \"https://svs.gsfc.nasa.gov/vis/a000000/a004700/a004720/lroc_color_poles_2k.tif\"\n",
+    "    lunar_color_file = os.path.join(os.getcwd(), 'data', os.path.basename(lunar_color_url))\n",
     "\n",
-    "color_data = Image.open(lunar_color_file)\n",
-    "pprint.pp(color_data)\n",
+    "    # Download color file\n",
+    "    if os.path.exists(lunar_color_file):\n",
+    "        print(\"Data already downloaded.\")\n",
+    "    else:\n",
+    "        print(\"Downloading data...\")\n",
+    "        download_with_progress(lunar_color_url, lunar_color_file)\n",
     "\n",
-    "if color_data.mode == \"RGB\":\n",
-    "    # モノクロ画像に変換\n",
-    "    color_data_gray = color_data.convert(\"L\")\n",
-    "\n",
-    "pprint.pp(color_data_gray)"
+    "    color_data = Image.open(lunar_color_file)\n",
+    "    pprint.pp(color_data)\n",
+    "    if color_data.mode == \"RGB\":\n",
+    "        # モノクロ画像に変換\n",
+    "        gamma22LUT  = [pow(x/255.0, 2.2)*255 for x in range(256)] * 3\n",
+    "        gamma045LUT = [pow(x/255.0, 1.0/2.2)*255 for x in range(256)]\n",
+    "        color_data_rgbL = color_data.point(gamma22LUT)\n",
+    "        color_data_grayL = color_data_rgbL.convert(\"L\")\n",
+    "        color_data_gray = color_data_grayL.point(gamma045LUT)\n",
+    "        # モノクロ画像を保存\n",
+    "        color_data_gray.save(lunar_color_gray_file)\n",
+    "    \n",
+    "# モノクロ画像を開く\n",
+    "color_data_gray = Image.open(lunar_color_gray_file)\n",
+    "pprint.pp(color_data_gray)\n",
+    "# モノクロ画像をセル内に表示\n",
+    "color_data_gray.show()"
    ]
   },
   {
@@ -321,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,8 +410,8 @@
     {
      "data": {
       "text/plain": [
-       "Affine(2665.138220872513, 0.0, 5458203.076346907,\n",
-       "       0.0, -2665.138220872513, 2729101.5381734534)"
+       "Affine(5330.276441745026, 0.0, 5458203.076346907,\n",
+       "       0.0, -5330.276441745026, 2729101.5381734534)"
       ]
      },
      "execution_count": 9,
@@ -416,14 +422,10 @@
    "source": [
     "from affine import Affine\n",
     "\n",
-    "lunar_color_data = np.array(color_data_gray)\n",
-    "image_width = color_data.width # pixels\n",
-    "image_height = color_data.height #pixels\n",
+    "image_width = color_data_gray.width # pixels\n",
+    "image_height = color_data_gray.height #pixels\n",
     "\n",
-    "# lunar_color_data = lunar_color_dataset.read(1)\n",
-    "# image_width = lunar_color_dataset.width # pixels\n",
-    "# image_height = lunar_color_dataset.height #pixels\n",
-    "\n",
+    "# 月の半径と円周を計算\n",
     "moon_radius = 1737400  # meters\n",
     "moon_circumference = 2 * math.pi * moon_radius\n",
     "color_lon_res =  moon_circumference / image_width\n",
@@ -436,6 +438,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "43cf8f3c92614d2e8bd96fb34ad6f53e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:63126/index.html?ui=P_0x3169198e0_1&reconnect=auto\" class=\"pyvista…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# lunar_shade_dataset is a blightness of color_data_gray\n",
+    "lunar_shade_data = np.array(color_data_gray)[:,:,0]\n",
+    "\n",
+    "data_scale = 100.0  # change to exaggerate the data effect\n",
+    "# 球体にデータをマッピングする\n",
+    "lunar_color_surface = map_data_on_sphere(\n",
+    "    data=lunar_shade_data,\n",
+    "    transform=color_transform,\n",
+    "    nodata=0,\n",
+    "    radius=moon_radius,\n",
+    "    lon_res=longitude_resolution,\n",
+    "    lat_res=latitude_resolution,\n",
+    "    data_scale=data_scale,\n",
+    "    )\n",
+    "plotter = pv.Plotter()\n",
+    "plotter.add_mesh(lunar_color_surface, show_edges=False, color=\"white\")\n",
+    "plotter.add_title(\"Lunar Color\\nres={} x {}, scale={}\".format(longitude_resolution, latitude_resolution, data_scale))\n",
+    "plotter.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -444,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -456,9 +499,9 @@
        "<tr><td>N Cells</td><td>2067840</td></tr>\n",
        "<tr><td>N Points</td><td>1033922</td></tr>\n",
        "<tr><td>N Strips</td><td>0</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-1.747e+06, 1.723e+06</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-1.739e+06, 1.719e+06</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>-1.743e+06, 1.726e+06</td></tr>\n",
+       "<tr><td>X Bounds</td><td>-1.755e+06, 1.737e+06</td></tr>\n",
+       "<tr><td>Y Bounds</td><td>-1.753e+06, 1.736e+06</td></tr>\n",
+       "<tr><td>Z Bounds</td><td>-1.758e+06, 1.741e+06</td></tr>\n",
        "<tr><td>N Arrays</td><td>1</td></tr>\n",
        "</table>\n",
        "\n",
@@ -471,26 +514,26 @@
        "</td></tr> </table>"
       ],
       "text/plain": [
-       "PolyData (0x315103d00)\n",
+       "PolyData (0x31699bbe0)\n",
        "  N Cells:    2067840\n",
        "  N Points:   1033922\n",
        "  N Strips:   0\n",
-       "  X Bounds:   -1.747e+06, 1.723e+06\n",
-       "  Y Bounds:   -1.739e+06, 1.719e+06\n",
-       "  Z Bounds:   -1.743e+06, 1.726e+06\n",
+       "  X Bounds:   -1.755e+06, 1.737e+06\n",
+       "  Y Bounds:   -1.753e+06, 1.736e+06\n",
+       "  Z Bounds:   -1.758e+06, 1.741e+06\n",
        "  N Arrays:   1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_scale = 200.0  # change to exaggerate the data effect\n",
+    "data_scale = 100.0  # change to exaggerate the data effect\n",
     "\n",
     "lunar_shade_surface = shade_on_surface(\n",
-    "    shade_data=lunar_color_data, \n",
+    "    shade_data=lunar_shade_data, \n",
     "    transform=color_transform, \n",
     "    nodata=0, \n",
     "    radius=moon_radius,\n",
@@ -510,18 +553,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f77ee44a139241ffa06a1799d4d3c988",
+       "model_id": "7cd1677b25074755bb4a1e94fc5e68b4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:62068/index.html?ui=P_0x31513ab10_1&reconnect=auto\" class=\"pyvista…"
+       "Widget(value='<iframe src=\"http://localhost:63126/index.html?ui=P_0x3169a2810_2&reconnect=auto\" class=\"pyvista…"
       ]
      },
      "metadata": {},
@@ -563,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -575,9 +618,9 @@
        "<tr><td>N Cells</td><td>2067840</td></tr>\n",
        "<tr><td>N Points</td><td>1033922</td></tr>\n",
        "<tr><td>N Strips</td><td>0</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-1.747e+06, 1.723e+06</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-1.739e+06, 1.719e+06</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>-1.743e+06, 1.726e+06</td></tr>\n",
+       "<tr><td>X Bounds</td><td>-1.755e+06, 1.737e+06</td></tr>\n",
+       "<tr><td>Y Bounds</td><td>-1.753e+06, 1.736e+06</td></tr>\n",
+       "<tr><td>Z Bounds</td><td>-1.758e+06, 1.741e+06</td></tr>\n",
        "<tr><td>N Arrays</td><td>1</td></tr>\n",
        "</table>\n",
        "\n",
@@ -590,17 +633,17 @@
        "</td></tr> </table>"
       ],
       "text/plain": [
-       "PolyData (0x315103d00)\n",
+       "PolyData (0x31699bbe0)\n",
        "  N Cells:    2067840\n",
        "  N Points:   1033922\n",
        "  N Strips:   0\n",
-       "  X Bounds:   -1.747e+06, 1.723e+06\n",
-       "  Y Bounds:   -1.739e+06, 1.719e+06\n",
-       "  Z Bounds:   -1.743e+06, 1.726e+06\n",
+       "  X Bounds:   -1.755e+06, 1.737e+06\n",
+       "  Y Bounds:   -1.753e+06, 1.736e+06\n",
+       "  Z Bounds:   -1.758e+06, 1.741e+06\n",
        "  N Arrays:   1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,14 +661,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reducing 90.0 percent out of the original mesh\n"
+      "Reducing 75.0 percent out of the original mesh\n"
      ]
     },
     {
@@ -634,36 +677,36 @@
        "\n",
        "<table style='width: 100%;'>\n",
        "<tr><th>PolyData</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>206784</td></tr>\n",
-       "<tr><td>N Points</td><td>103420</td></tr>\n",
+       "<tr><td>N Cells</td><td>516959</td></tr>\n",
+       "<tr><td>N Points</td><td>258531</td></tr>\n",
        "<tr><td>N Strips</td><td>0</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-1.743e+06, 1.723e+06</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-1.737e+06, 1.720e+06</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>-1.741e+06, 1.725e+06</td></tr>\n",
+       "<tr><td>X Bounds</td><td>-1.755e+06, 1.737e+06</td></tr>\n",
+       "<tr><td>Y Bounds</td><td>-1.754e+06, 1.737e+06</td></tr>\n",
+       "<tr><td>Z Bounds</td><td>-1.757e+06, 1.740e+06</td></tr>\n",
        "<tr><td>N Arrays</td><td>0</td></tr>\n",
        "</table>\n",
        "\n"
       ],
       "text/plain": [
-       "PolyData (0x3151630a0)\n",
-       "  N Cells:    206784\n",
-       "  N Points:   103420\n",
+       "PolyData (0x30ca6ab00)\n",
+       "  N Cells:    516959\n",
+       "  N Points:   258531\n",
        "  N Strips:   0\n",
-       "  X Bounds:   -1.743e+06, 1.723e+06\n",
-       "  Y Bounds:   -1.737e+06, 1.720e+06\n",
-       "  Z Bounds:   -1.741e+06, 1.725e+06\n",
+       "  X Bounds:   -1.755e+06, 1.737e+06\n",
+       "  Y Bounds:   -1.754e+06, 1.737e+06\n",
+       "  Z Bounds:   -1.757e+06, 1.740e+06\n",
        "  N Arrays:   0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target_reduction = 0.90\n",
-    "print(f\"Reducing {target_reduction * 100.0} percent out of the original mesh\")\n",
-    "lunar_shade_surface_decimated = lunar_shade_surface.decimate(target_reduction)\n",
+    "lunar_shade_reduction = 0.75\n",
+    "print(f\"Reducing {lunar_shade_reduction * 100.0} percent out of the original mesh\")\n",
+    "lunar_shade_surface_decimated = lunar_shade_surface.decimate(lunar_shade_reduction)\n",
     "lunar_shade_surface_decimated"
    ]
   },
@@ -676,18 +719,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81e0db1b556c41a4aee8d4405a28fba5",
+       "model_id": "23352b32edbb40a89a4999c93f501623",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:62068/index.html?ui=P_0x31513b110_2&reconnect=auto\" class=\"pyvista…"
+       "Widget(value='<iframe src=\"http://localhost:63126/index.html?ui=P_0x30cad05f0_3&reconnect=auto\" class=\"pyvista…"
       ]
      },
      "metadata": {},
@@ -713,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +783,7 @@
        "\n"
       ],
       "text/plain": [
-       "PolyData (0x314d72bc0)\n",
+       "PolyData (0x30cae71c0)\n",
        "  N Cells:    206784\n",
        "  N Points:   103446\n",
        "  N Strips:   0\n",
@@ -750,15 +793,15 @@
        "  N Arrays:   0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target_reduction = 0.90\n",
-    "print(f\"Reducing {target_reduction * 100.0} percent out of the original mesh\")\n",
-    "lunar_surface_decimated = lunar_surface.decimate(target_reduction)\n",
+    "lunar_surface_reduction = 0.90\n",
+    "print(f\"Reducing {lunar_surface_reduction * 100.0} percent out of the original mesh\")\n",
+    "lunar_surface_decimated = lunar_surface.decimate(lunar_surface_reduction)\n",
     "lunar_surface_decimated"
    ]
   },
@@ -771,18 +814,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9101cf7efdba4f67ba2a51f740e3d85a",
+       "model_id": "a4ac56b4709e4ad8a1a2d4b752b80084",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:62068/index.html?ui=P_0x3389a00e0_12&reconnect=auto\" class=\"pyvist…"
+       "Widget(value='<iframe src=\"http://localhost:63126/index.html?ui=P_0x3169a3830_4&reconnect=auto\" class=\"pyvista…"
       ]
      },
      "metadata": {},
@@ -792,9 +835,8 @@
    "source": [
     "from pymeshfix import MeshFix\n",
     "\n",
-    "model_radius = 0.05 # [m]\n",
+    "model_radius = 0.06 # [m]\n",
     "model_thickness = 0.0006 # [m]\n",
-    "hole_radius = 0.0115 # ランプを入れる穴の半径[m]\n",
     "\n",
     "# 月面と月影のメッシュを結合して、ランプのシェルを作成\n",
     "outer_mesh = lunar_surface_decimated.scale(model_radius / moon_radius, inplace=False)\n",
@@ -808,21 +850,23 @@
     "# rotation_angle = 20 # [degrees]\n",
     "# lunar_shell.rotate_y(rotation_angle)\n",
     "\n",
-    "# ランプの穴を作成\n",
-    "hole_center = (0, 0, -model_radius)\n",
-    "cyl = pv.Cylinder(\n",
-    "    radius=hole_radius,\n",
-    "    height=model_radius,\n",
-    "    direction=(0, 0, -1),\n",
-    "    center=hole_center)\n",
-    "lunar_lamp = lunar_shell.triangulate(inplace=False)\n",
-    "cyl.triangulate(inplace=True)\n",
-    "lunar_lamp = lunar_lamp.boolean_difference(cyl)\n",
+    "# # ランプの穴を作成\n",
+    "# hole_radius = 0.005 # ランプを入れる穴の半径[m]\n",
+    "# hole_center = (0, 0, -(model_radius)) # ランプの穴の中心座標\n",
+    "# cyl = pv.Cylinder(\n",
+    "#     radius=hole_radius,\n",
+    "#     height=0.01,\n",
+    "#     # height=model_radius,\n",
+    "#     direction=(0, 0, -1),\n",
+    "#     center=hole_center)\n",
+    "# cyl.triangulate(inplace=True)\n",
+    "# lunar_shell.triangulate(inplace=True)\n",
+    "# lunar_shell = lunar_shell.boolean_difference(cyl)\n",
     "\n",
     "# ランプを表示\n",
     "plotter = pv.Plotter()\n",
-    "plotter.add_mesh(lunar_lamp, show_edges=False, color=\"white\", opacity=0.9)\n",
-    "plotter.add_title(\"Lunar Lamp\")\n",
+    "plotter.add_mesh(lunar_shell, show_edges=False, color=\"white\", opacity=0.9)\n",
+    "plotter.add_title(\"Lunar Shell\")\n",
     "plotter.show()"
    ]
   },
@@ -835,11 +879,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lunar_lamp.save(\"model/lunar_lamp.stl\")"
+    "lunar_shell.save(\"model/lunar-lamp.stl\")"
    ]
   }
  ],
